# cookiepy

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  LICENSE.rst  README.md  README.rst  blog.html  cookiecutter.json  index.html  markdown-page.html  noxfile.py  package-lock.json  package.json  pycharm.sh  pyproject.toml  sitemap.xml
.github/workflows/: codeql-analysis.yml  deploy.yml  documentation.yml
assets/css/: styles.05b66755.css
assets/files/: cookiecutter-9bade9b73b5eefd2b139924e66a90eca.json
assets/js/: 06320c64.f908132f.js  0e384e19.555ffb09.js  0e384e19.78ffd192.js  0e384e19.86083836.js  17896441.a2f9d37e.js  1f391b9e.3564b8d8.js  393be207.4e97165b.js  393be207.fcdaae33.js  412.2bd8995a.js  412.dad70370.js  5f94b19d.783f889d.js  5f94b19d.cfc5fde0.js  6007f000.0d512a4a.js  663e54dc.8e2863c0.js  6727197b.c3c7d617.js  7cc7984e.d64f4d8b.js  814f3328.1229d1a7.js  814f3328.88aea1f2.js  935f2afb.0bf43d6f.js  935f2afb.3ee64d7b.js  935f2afb.c446760b.js  935f2afb.f09cfd27.js  bf4e926c.4121086c.js  bf4e926c.fe2f715d.js  c4759b4e.85736be8.js  c4f5d8e4.6ca9adca.js  c4f5d8e4.a9cbb8a4.js  ccc49370.1b0a0af2.js  common.0546ecd1.js  common.8e50157d.js  dda4ac34.48863563.js  dda4ac34.50379fd0.js  e6181be3.27dcdd67.js  e6181be3.6bc4e550.js  main.07274917.js  main.1c48da96.js  main.56ed38d6.js  main.94e79d79.js  main.c3db9e61.js  runtime~main.3e28e557.js  (+4 more)
blog/: archive.html  atom.xml  rss.xml  tags.html  welcome.html
blog/2022/07/18/: welcome.html
blog/tags/: blog.html
docs/: conf.py  guide.rst  hooks.html  index.rst  intro.html  quickstart.rst  requirements.txt
hooks/: README.rst  post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.json  test_cookiepy.py  test_post_gen_project.py  test_pre_gen_project.py
tools/: README.rst  dependencies-table.py  dependencies_table.py  prepare-github-release.py  prepare_github_release.py  publish-github-release.py  publish_github_release.py
website/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/blog/: authors.yml
website/blog/2022-07-18-welcome/: index.md
website/docs/: hooks.md  intro.md
website/src/components/HomepageFeatures/: index.js
{{cookiecutter.project_name}}/: .bumpversion.cfg  .pre-commit-config.yaml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py  tbump.toml  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: release.yml
{{cookiecutter.project_name}}/conda.recipe/: meta.yaml
{{cookiecutter.project_name}}/docs/: conf.py  index.md  reference.md  requirements.txt
{{cookiecutter.project_name}}/notebooks/: README.md
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  cli.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/helpers/: fileutils.py
