[tool.poetry]
name = "cookiepy"
version = "0.1.0"
description = "Cookiecutter para criação de reposiórios Python."
authors = ["ingwersen-erik <erik.ingwersen@br.ey.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
