[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.short_description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
homepage = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
documentation = "https://{{cookiecutter.project_name}}.readthedocs.io"
packages = [
    { include = "{{cookiecutter.package_name}}", from = "src" },
]
classifiers = [
    "{{cookiecutter.development_status}}",
]

[tool.poetry.urls]
Changelog = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/releases"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

{%- if cookiecutter.command_line_interface|lower == 'click' %}
click = { version = ">=8.0.1", optional = false }
{%- endif %}

{%- if cookiecutter.use_black|lower != 'n' %}
black = { version = ">=21.10b0", optional = false }
{%- endif %}

{%- if cookiecutter.use_flake8|lower == 'y' %}
flake8 = { version = ">=4.0.1", optional = false }
flake8-bandit = { version = ">=2.1.2", optional = false }
flake8-bugbear = { version = ">=21.9.2", optional = false }
flake8-docstrings = { version = ">=1.6.0", optional = false }
flake8-rst-docstrings = { version = ">=0.2.5", optional = false }
flake8-annotations = {version = "^2.7.0", python = ">= 3.6.2", optional = false }
{%- endif %}

python-dotenv = { version = "^0.19.2", optional = false }


[tool.poetry.dev-dependencies]
Pygments = { version = ">=2.10.0", optional = true }

{%- if cookiecutter.use_black|lower == 'n' %}
black = { version = ">=21.10b0", optional = true }
{%- endif %}

coverage = {extras = ["toml"], version = ">=6.2" }

{%- if cookiecutter.command_line_interface|lower != 'click' %}
click = { version = ">=8.0.1", optional = true }
{%- endif %}

darglint = { version = ">=1.8.1", optional = true }

{%- if cookiecutter.use_flake8|lower == 'n' %}
flake8 = { version = ">=4.0.1", optional = true }
flake8-annotations = {version = "^2.7.0", python = ">= 3.6.2", optional = true }
flake8-bandit = { version = ">=2.1.2", optional = true }
flake8-bugbear = { version = ">=21.9.2", optional = true }
flake8-docstrings = { version = ">=1.6.0", optional = true }
flake8-rst-docstrings = { version = ">=0.2.5", optional = true }
{%- endif %}

furo = { version = ">=2021.11.12", optional = true }
isort = { version = ">=5.10.1", optional = true }
mypy = { version = ">=0.930", optional = true }
myst-parser = { version = ">=0.16.1", optional = true }
pep8-naming = { version = ">=0.12.1", optional = true }
pre-commit = { version = ">=2.16.0", optional = true }
pre-commit-hooks = { version = ">=4.1.0", optional = true }
pytest = { version = ">=6.2.5", optional = true }
pyupgrade = { version = ">=2.29.1", optional = true }
safety = { version = ">=1.10.3", optional = true }
sphinx = { version = ">=4.3.2", optional = true }
sphinx-autobuild = { version = ">=2021.3.14", optional = true }
sphinx-click = { version = ">=3.0.2", optional = true }
typeguard = { version = ">=2.13.3", optional = true }
xdoctest = { extras = ["colors"], version = ">=0.15.10", optional = true }


[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.package_name}}.__main__:main"


[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]


[tool.coverage.run]
branch = true
source = ["{{cookiecutter.package_name}}", "tests"]


[tool.coverage.report]
show_missing = true
fail_under = 100


[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2


[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true


{%- if cookiecutter.use_black|lower == 'y' %}
[tool.black]
line-length = 80
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39']
include = '.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | docs
)/
'''
{%- endif %}


[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools >= 40.9.0",
    "wheel",
{%- if cookiecutter.setup_py_uses_setuptools_scm == 'yes' %}
    "setuptools_scm>=3.3.1",
{%- endif %}
]
build-backend = "poetry.core.masonry.api"
